tests/test_assets/semantics/arrays/fail/additional_cases.cog

// Arrays aren't assignable
a: i32[3];
b: i32[3];

a = b;

// Arrays of structs
Point::struct {
    x: i32;
    y: i32;
}

points: Point[2];

points[0].x = 1;
points[1].y = 2;

// Constant index
INDEX :: 1;

values: i32[3];

values[INDEX];

// Invalid constant index
INDEX_2 :: 5;

values: i32[3];

values[INDEX_2];

// Nested initializer
matrix: i32[2][2] = [
    [1,2],
    [3,4],
];

// Nested initializer wrong dimensions
matrix: i32[2][2] = [
    [1],
    [2,3],
];